<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myLayout" android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
    android:text="@string/title" android:layout_x="110dp"
    android:layout_y="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <TextView
    android:text="@string/empid"
    android:layout_x="30dp"
    android:layout_y="50dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editEmpid"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="40dp"
        android:inputType="number" />
    <TextView
    android:text="@string/name"
    android:layout_x="30dp"
    android:layout_y="100dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:inputType="text" />
    <TextView
    android:text="@string/salary"
    android:layout_x="30dp"
    android:layout_y="150dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editsalary"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_x="50dp"
        android:layout_y="241dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="127dp"
        android:layout_height="69dp"
        android:layout_x="205dp"
        android:layout_y="236dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnModify"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_x="50dp"
        android:layout_y="307dp"
        android:text="@string/modify" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_x="206dp"
        android:layout_y="307dp"
        android:text="@string/view" />

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_x="121dp"
        android:layout_y="382dp"
        android:text="@string/view_all" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="611dp"
        android:layout_height="515dp"
        android:layout_x="-26dp"
        android:layout_y="198dp"
        app:srcCompat="@drawable/e" />

</AbsoluteLayout>